--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,11 @@ project(gl-adagio)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
-file(GLOB_RECURSE SOURCES "${CMAKE_SOURCE_DIR}/src/*.cpp")
+file(GLOB_RECURSE SOURCES "${CMAKE_SOURCE_DIR}/src/*.cpp" "${CMAKE_SOURCE_DIR}/src/graphics/*.cpp" "${CMAKE_SOURCE_DIR}/src/state/*.cpp" "${CMAKE_SOURCE_DIR}/src/game/states/*.cpp" "${CMAKE_SOURCE_DIR}/src/game/*.cpp")
 file(GLOB_RECURSE TESTS "${CMAKE_SOURCE_DIR}/test/*.cpp")
 file(COPY "${CMAKE_SOURCE_DIR}/assets" DESTINATION "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
 
-add_executable(game ${SOURCES} src/graphics/SpriteBatch.cpp src/graphics/SpriteBatch.h src/graphics/SpriteState.cpp src/graphics/SpriteState.h src/graphics/RenderState.h src/graphics/TextState.cpp src/graphics/TextState.h src/graphics/RenderState.cpp)
+add_executable(game ${SOURCES})
 target_link_libraries(game raylib)
 include_directories(/usr/include/entt)
 
