Add test workflow
Add test workflow. For now, let's just test on Ubuntu since we need to
install external dependencies, and we're only developing on Linux.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,8 +30,14 @@ FetchContent_MakeAvailable(raylib)
 
 add_executable(adagio ${SOURCES})
 target_link_libraries(adagio raylib)
-include_directories(third_party/entt)
 
+
+add_subdirectory(third_party/entt)
 add_subdirectory(third_party/Catch2)
 add_executable(adagio_test ${TESTS})
-target_link_libraries(adagio_test PRIVATE Catch2::Catch2 raylib)
+target_link_libraries(adagio_test PRIVATE Catch2::Catch2 raylib EnTT::EnTT)
+
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/third_party/Catch2/contrib)
+include(CTest)
+include(Catch)
+catch_discover_tests(adagio_test)
