--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ set(BUILD_GAMES OFF CACHE BOOL "" FORCE) # don't build the supplied example game
 FetchContent_Declare(
         raylib
         GIT_REPOSITORY "https://github.com/raysan5/raylib.git"
-        GIT_TAG "master"
+        GIT_TAG "5.0"
         GIT_PROGRESS TRUE
 )
 FetchContent_MakeAvailable(raylib)
