Add Raylib graphics backend and use it in main
Finally bring the newer abstract graphics systems into the main part of
the engine. Create backends for raylib and use them in the
LeonaTestState so we can finally render Leona again. Text rendering and
adjustments to Renderers in GracilisGame are still pending.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,14 +28,13 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(raylib)
 
-add_executable(adagio ${SOURCES})
-target_link_libraries(adagio raylib)
-
-
 add_subdirectory(third_party/entt)
 add_subdirectory(third_party/Catch2)
 add_executable(adagio_test ${TESTS})
 target_link_libraries(adagio_test PRIVATE Catch2::Catch2 raylib EnTT::EnTT)
+
+add_executable(adagio ${SOURCES})
+target_link_libraries(adagio raylib EnTT::EnTT)
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/third_party/Catch2/contrib)
 include(CTest)
