Audio + SoLoud backend
Build out the AudioService so that it's actually usable in games. This
includes:
  - Adding a `PlayingSound` struct that lets us modify properties of a
    playing sound.
  - Providing enough abstract interfaces to isolate the AudioService
    from any knowledge of what specific internal types it uses
  - Adding SoLoud as a third party dependency. This also includes SDL2
    as well.
  - Implementing SoLoud specific backends for the AudioService
  - A new implementation of `ResourceLibrary` that is pointer safe. The
    previous implementation uses a vector and copies objects from
    AssetLoaders to the ResourceLibrary. This does not work with SoLoud,
    which will free up a sound in the class destructor.

Ideally I wanted to refactor how `ResourceLibrary` worked anyway, so
this pointer-safe implementation will probably replace all other
instances eventually. I might include support for both primitive array
and std::list implementations which should both keep references valid
for as long as objects are in use.

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,7 @@
     path = third_party/entt
     url = https://github.com/skypjack/entt
     branch = v3.13.x
+
+[submodule "third_party/soloud"]
+    path = third_party/soloud
+    url = https://github.com/jarikomppa/soloud.git
