Make engine usable as a library
Add an `include` directory which is what includes publicly visible
headers. Update CMakeLists to allow the engine to be used as a library.

The process of doing this has illustrated some new architectural needs
of the engine, but for now making it usable at all is better than
nothing!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,26 @@
 cmake_minimum_required(VERSION 3.25)
 project(gl-adagio)
 
+
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
+file(GLOB_RECURSE LIBSOURCES
+        "${CMAKE_CURRENT_SOURCE_DIR}/src/animation/*.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/src/audio/*.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/src/event/*.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/src/graphics/*.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/src/graphics/**/*.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/src/input/*.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/src/input/**/*.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/src/literals/*.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/src/math/*.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/src/resource/*.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/src/state/*.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/src/game/components/events/*.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/src/game/systems/*.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/src/backends/raylib/*.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/src/backends/soloud/*.cpp"
+)
 file(GLOB_RECURSE SOURCES "${CMAKE_SOURCE_DIR}/src/*.cpp" "${CMAKE_SOURCE_DIR}/src/literals/*.cpp" "${CMAKE_SOURCE_DIR}/src/input/*.cpp" "${CMAKE_SOURCE_DIR}/src/math/*.cpp" "${CMAKE_SOURCE_DIR}/src/event/*.cpp"
         "${CMAKE_SOURCE_DIR}/src/animation/*.cpp"
         "${CMAKE_SOURCE_DIR}/src/audio/*.cpp" "${CMAKE_SOURCE_DIR}/src/graphics/*.cpp"
@@ -22,7 +40,10 @@ file(GLOB_RECURSE TESTS
         "${CMAKE_SOURCE_DIR}/src/state/*.cpp" "${CMAKE_SOURCE_DIR}/test/state/**/*.cpp"
         "${CMAKE_SOURCE_DIR}/src/event/*.cpp" "${CMAKE_SOURCE_DIR}/test/event/*.cpp"
         "${CMAKE_SOURCE_DIR}/test/*.cpp")
-file(COPY "${CMAKE_SOURCE_DIR}/assets" DESTINATION "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
+
+if (CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
+    file(COPY "${CMAKE_SOURCE_DIR}/assets" DESTINATION "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
+endif()
 
 # Raylib include
 # This is temporary; eventually raylib will not be included in this engine
@@ -53,12 +74,17 @@ FetchContent_MakeAvailable(SDL2)
 set(BUILD_SHARED_LIBS FALSE)
 
 include_directories(${SDL2_SOURCE_DIR}/include)
-include_directories(third_party/soloud/include)
-add_subdirectory(third_party/soloud/contrib)
-add_subdirectory(third_party/entt)
-add_subdirectory(third_party/Catch2)
-add_executable(adagio_test ${TESTS})
-target_link_libraries(adagio_test PRIVATE Catch2::Catch2 raylib EnTT::EnTT)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/third_party/soloud/include)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/third_party/soloud/contrib)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/third_party/entt)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/third_party/Catch2)
+add_library(gl-adagio OBJECT ${LIBSOURCES})
+target_link_libraries(gl-adagio PRIVATE raylib EnTT::EnTT)
+if (CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
+
+    add_executable(adagio_test ${TESTS})
+    target_link_libraries(adagio_test PRIVATE Catch2::Catch2 raylib EnTT::EnTT)
+    target_include_directories(gl-adagio PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src" PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/src/include")
 
 add_executable(adagio ${SOURCES})
 if (EMSCRIPTEN)
@@ -67,10 +93,12 @@ if (EMSCRIPTEN)
     set_target_properties(adagio
             PROPERTIES SUFFIX ".html"
             LINK_FLAGS " --bind -fexceptions -s STACK_SIZE=4194304 -s WASM=1 -s MIN_WEBGL_VERSION=1 -s ABORT_ON_WASM_EXCEPTIONS=0 -g2 -s USE_GLFW=3 -s ASYNCIFY -s USE_SDL=0 -O3 --embed-file \"${CMAKE_SOURCE_DIR}/assets@assets\"")
-endif()
+endif ()
 target_link_libraries(adagio soloud raylib EnTT::EnTT SDL2::SDL2)
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/third_party/Catch2/contrib)
 include(CTest)
 include(Catch)
 catch_discover_tests(adagio_test)
+
+endif()
